Improved forecast grid and fixed icon-today image size issue
Removed my "forecast template", overcomplicated and inefficient.

Was stuck on the size of the current weather's icon, was much too large. Turned out to simply need to add width="whatever px".

--- a/src/styles.css
+++ b/src/styles.css
@@ -76,6 +76,9 @@ h2 {
   color: rgba(97, 201, 242, 0.566);
 }
 
+.weather-forecast {
+}
+
 .credits {
   font-size: 0.75rem;
 }
